demo/bin/happy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: happy-ingress
  namespace: ingress-nginx
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: happy.k8s.io
    http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-kubernetes-service
          servicePort: 80
