demo/bin/ingress-test.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: hello-kubernetes-service
    servicePort: 80
